syntax = "proto3";

option csharp_namespace = "Avalanche.Grpc.Proto";

import "google/protobuf/wrappers.proto";

package Avalanche.Market;

message GetStoreProto {

  message Request {

    string StoreId = 1;
  }

  message Response {

    string Name = 1;
    string Description = 2;

    google.protobuf.StringValue Logo = 3;

    string Email = 4;
  }
}

message GetStoresProto {

  message Request {

    string NameSearch = 1;
  }

  message Response {
    string StoreId = 1;

    string Name = 2;
    string Description = 3;

    google.protobuf.StringValue Logo = 4;
  }
}

message CreateStoreProto {

  message Request {

    string Name = 1;
    string Description = 2;

    string Email = 3;
  }

  message Response {

    string StoreId = 1;
  }
}

message UpdateStoreProto {

  message Request {

    string StoreId = 1;
    
    string Description = 2;

    string Email = 3;
  }

  message Response {
  }
}

service StoreServiceProto {

  rpc Create(CreateStoreProto.Request) returns (CreateStoreProto.Response);
  rpc Update(UpdateStoreProto.Request) returns (UpdateStoreProto.Response);
  
  rpc GetOne(GetStoreProto.Request) returns (GetStoreProto.Response);
  rpc GetMany(GetStoresProto.Request) returns (stream GetStoresProto.Response);
}